Chasing down some code inspection problems.